fix: modal overflow

--- a/react/components/form/ArrayFieldTemplate/ItemTransitions.css
+++ b/react/components/form/ArrayFieldTemplate/ItemTransitions.css
@@ -8,7 +8,7 @@
 }
 
 .item-enter-done {
-  transform: translateX(18rem);
+  padding: 2rem;
 }
 
 .item-exit {
